[package]
name = "blog_os"
version = "0.1.0"
authors = ["Kyle Galloway <christopher.galloway@hexagon.com>"]

# the profile used for the cargo build
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for the cargo build --release
[profile.release]
panic = "abort" # disable stack unwinding on panic