[package]
name = "blog_os"
version = "0.1.0"
authors = ["Kyle Galloway <christopher.galloway@hexagon.com>"]

[dependencies]
rlibc = "1.0"
volatile = "0.2.3"
spin = "0.4.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for the cargo build
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for the cargo build --release
[profile.release]
panic = "abort" # disable stack unwinding on panic